--- a/config/database.yml
+++ b/config/database.yml
@@ -7,6 +7,14 @@ development:
   password: 12345
   host: localhost
   port: 5432
+test:
+  adapter: postgresql
+  encoding: unicode
+  database: messages_sinatra_test
+  username: userpg
+  password: 12345
+  host: localhost
+  port: 5432
 production:
   adapter: postgresql
   encoding: unicode
